@@ -1,3 +1,5 @@
+// $Id$
+
 union MultiLabelUnion switch (long) {
   case 0:
   case 1:
