@@ -1,3 +1,12 @@
+Wed Mar 06 13:29:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>
+
+        * tao/PI_Server/ServerRequestInterceptorC.h:
+        * tests/Bug_4097_Regression/Bug_4097_Regression.cpp:
+        * tests/Bug_4097_Regression/Bug_4097_Regression.idl:
+        * tests/Bug_4097_Regression/README:
+
+        Fuzz fixes.
+
 Wed Mar 06 09:20:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>
 
         * docs/Tags.html:
